--- a/index.html
+++ b/index.html
@@ -2,13 +2,40 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Restaurant Menu</title>
+  <title>Ankit Food Corner</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>My Restaurant</h1>
-<p>Welcome to our digital menu</p>
+<header>
+  <h1>Ankit Food Corner</h1>
+  <p>Best Biryani & Fast Food</p>
+</header>
+
+<section class="info">
+  <p>📞 Phone: <strong>9123456789</strong></p>
+  <button onclick="orderNow()">Order on WhatsApp</button>
+</section>
+
+<section class="menu">
+  <h2>Menu</h2>
+
+  <div class="item">
+    <span>Chicken Biryani</span>
+    <span>₹180</span>
+  </div>
+
+  <div class="item">
+    <span>Mutton Biryani</span>
+    <span>₹250</span>
+  </div>
+
+  <div class="item">
+    <span>Chicken Roll</span>
+    <span>₹80</span>
+  </div>
+
+</section>
 
 <script src="script.js"></script>
 </body>
