--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Ankit Food Corner</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=2">
+  <style>
+body {
+  background: yellow !important;
+}
+  </style>
 </head>
 <body>
 
