--- a/gallery.html
+++ b/gallery.html
@@ -45,7 +45,7 @@
 
 <section class="gallery">
   <div class="card">
-    <img src="https://images.unsplash.com/photo-1604908177522-040c1b7b91f1">
+<img src="https://images.unsplash.com/photo-1604908177522-040c1b7b91f1?auto=format&fit=crop&w=800&q=80">
     <h3>Chicken Biryani</h3>
     <p>₹180</p>
   </div>
