--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
       <h3>Chicken Biryani</h3>
       <p>₹180</p>
     </div>
+<a href="https://wa.me/919123456789?text=I want to order Chicken Biryani"
+style="
+display:inline-block;
+margin:20px auto;
+background:#25D366;
+color:white;
+padding:10px 20px;
+border-radius:25px;
+text-decoration:none;
+font-size:16px;">
+Order on WhatsApp
+</a>
 
     <div class="card">
       <img src="images/biryani.jpg">
