--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Order on WhatsApp
 </a>
 
     <div class="card">
-      <img src="images/biryani.jpg">
+      <img src="https://images.unsplash.com/photo-1604908177522-040c1b79b11f?auto=format&fit=crop&w=800&q=80">
       <h3>Mutton Biryani</h3>
       <p>₹250</p>
     </div>
