--- a/index.html
+++ b/index.html
@@ -10,16 +10,9 @@
 
 <!-- HERO -->
 <section class="hero">
-  <div class="overlay">
-    <h1>Ankit Food Corner</h1>
-    <p>Best Biryani & Fast Food</p>
-    <button onclick="orderNow()">Order on WhatsApp</button>
-  </div>
-</section>
-
-<!-- INFO -->
-<section class="info">
-  📞 Call us: <strong>9123456789</strong>
+  <h1>Ankit Food Corner</h1>
+  <p>Best Biryani & Fast Food</p>
+  <a class="btn" href="https://wa.me/919123456789">Order on WhatsApp</a>
 </section>
 
 <!-- MENU -->
@@ -27,45 +20,40 @@
   <h2>Our Menu</h2>
 
   <div class="menu-grid">
+
     <div class="card">
-      <img src="images/biryani.jpg">
+      <img src="https://images.unsplash.com/photo-1604908177522-040c1b79b11f">
       <h3>Chicken Biryani</h3>
       <p>₹180</p>
+      <a class="order" href="https://wa.me/919123456789?text=I want Chicken Biryani">Order</a>
     </div>
-<a href="https://wa.me/919123456789?text=I want to order Chicken Biryani"
-style="
-display:inline-block;
-margin:20px auto;
-background:#25D366;
-color:white;
-padding:10px 20px;
-border-radius:25px;
-text-decoration:none;
-font-size:16px;">
-Order on WhatsApp
-</a>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1604908177522-040c1b79b11f?auto=format&fit=crop&w=800&q=80">
+      <img src="https://images.unsplash.com/photo-1628294898516-344152572ee8">
       <h3>Mutton Biryani</h3>
       <p>₹250</p>
+      <a class="order" href="https://wa.me/919123456789?text=I want Mutton Biryani">Order</a>
     </div>
 
     <div class="card">
-      <img src="images/roll.jpg">
+      <img src="https://images.unsplash.com/photo-1606755962773-d324e5a13086">
       <h3>Chicken Roll</h3>
       <p>₹80</p>
+      <a class="order" href="https://wa.me/919123456789?text=I want Chicken Roll">Order</a>
     </div>
 
     <div class="card">
-      <img src="images/burger.jpg">
+      <img src="https://images.unsplash.com/photo-1550547660-d9450f859349">
       <h3>Chicken Burger</h3>
       <p>₹120</p>
+      <a class="order" href="https://wa.me/919123456789?text=I want Chicken Burger">Order</a>
     </div>
+
   </div>
+
+  <a class="gallery-link" href="gallery.html">View Food Gallery</a>
 </section>
 
-<!-- FOOTER -->
 <footer>
   © 2026 Ankit Food Corner | All Rights Reserved
 </footer>
