--- a/gallery.html
+++ b/gallery.html
@@ -1,42 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Food Gallery</title>
-  <link rel="stylesheet" href="style.css">
+<title>Gallery</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<section class="menu">
-  <h2>Food Gallery</h2>
+<h1>Food Gallery</h1>
 
-  <div class="menu-grid">
+<img width="300" src="https://images.unsplash.com/photo-1604908177522-040c1b7b91f1">
+<img width="300" src="https://images.unsplash.com/photo-1628294896516-344152572ee8">
+<img width="300" src="https://images.unsplash.com/photo-1550547660-d9450f859349">
 
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1604908177522-040c1b79b11f">
-      <h3>Chicken Biryani</h3>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1628294898516-344152572ee8">
-      <h3>Mutton Biryani</h3>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1606755962773-d324e5a13086">
-      <h3>Chicken Roll</h3>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1550547660-d9450f859349">
-      <h3>Chicken Burger</h3>
-    </div>
-
-  </div>
-
-  <br>
-  <a class="gallery-link" href="index.html">Back to Menu</a>
-</section>
+<br><br>
+<a class="btn" href="index.html">Back</a>
 
 </body>
 </html>
