--- a/index.html
+++ b/index.html
@@ -1,63 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Ankit Food Corner</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Ankit Food Corner</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- HERO -->
-<section class="hero">
+<header class="hero">
   <h1>Ankit Food Corner</h1>
   <p>Best Biryani & Fast Food</p>
   <a class="btn" href="https://wa.me/919123456789">Order on WhatsApp</a>
-</section>
+</header>
 
-<!-- MENU -->
 <section class="menu">
   <h2>Our Menu</h2>
 
-  <div class="menu-grid">
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1604908177522-040c1b79b11f">
-      <h3>Chicken Biryani</h3>
-      <p>₹180</p>
-      <a class="order" href="https://wa.me/919123456789?text=I want Chicken Biryani">Order</a>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1628294898516-344152572ee8">
-      <h3>Mutton Biryani</h3>
-      <p>₹250</p>
-      <a class="order" href="https://wa.me/919123456789?text=I want Mutton Biryani">Order</a>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1606755962773-d324e5a13086">
-      <h3>Chicken Roll</h3>
-      <p>₹80</p>
-      <a class="order" href="https://wa.me/919123456789?text=I want Chicken Roll">Order</a>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1550547660-d9450f859349">
-      <h3>Chicken Burger</h3>
-      <p>₹120</p>
-      <a class="order" href="https://wa.me/919123456789?text=I want Chicken Burger">Order</a>
-    </div>
-
+  <div class="card">
+    <img src="https://images.unsplash.com/photo-1604908177522-040c1b7b91f1">
+    <h3>Chicken Biryani</h3>
+    <p>₹180</p>
   </div>
 
-  <a class="gallery-link" href="gallery.html">View Food Gallery</a>
+  <div class="card">
+    <img src="https://images.unsplash.com/photo-1628294896516-344152572ee8">
+    <h3>Mutton Biryani</h3>
+    <p>₹250</p>
+  </div>
+
+  <div class="card">
+    <img src="https://images.unsplash.com/photo-1606755962773-d324e5a13086">
+    <h3>Chicken Roll</h3>
+    <p>₹80</p>
+  </div>
+
+  <div class="card">
+    <img src="https://images.unsplash.com/photo-1550547660-d9450f859349">
+    <h3>Chicken Burger</h3>
+    <p>₹120</p>
+  </div>
+
 </section>
 
 <footer>
-  © 2026 Ankit Food Corner | All Rights Reserved
+  © 2026 Ankit Food Corner
+  <br>
+  <a href="gallery.html">View Gallery</a>
 </footer>
 
-<script src="script.js"></script>
 </body>
 </html>
