--- a/gallery.html
+++ b/gallery.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Gallery</title>
-<link rel="stylesheet" href="style.css">
+  <title>Gallery - Ankit Food Corner</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Food Gallery</h1>
+<section class="menu">
+  <h2>Food Gallery</h2>
 
-<img width="300" src="https://images.unsplash.com/photo-1604908177522-040c1b7b91f1">
-<img width="300" src="https://images.unsplash.com/photo-1628294896516-344152572ee8">
-<img width="300" src="https://images.unsplash.com/photo-1550547660-d9450f859349">
+  <div class="menu-grid">
+    <img src="images/biryani.jpg">
+    <img src="images/mutton.jpg">
+    <img src="images/roll.jpg">
+    <img src="images/burger.jpg">
+  </div>
 
-<br><br>
-<a class="btn" href="index.html">Back</a>
+  <br>
+  <a class="btn" href="index.html">Back to Home</a>
+</section>
 
 </body>
 </html>
