--- a/index.html
+++ b/index.html
@@ -73,3 +73,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+<section class="qr">
+  <h2>Scan & Order</h2>
+  <img src="images/qr.png" alt="QR Code">
+</section>
