--- a/index.html
+++ b/index.html
@@ -77,3 +77,7 @@
   <h2>Scan & Order</h2>
   <img src="images/qr.png" alt="QR Code">
 </section>
+<a class="order"
+href="https://wa.me/91XXXXXXXXXX?text=Hello, I want to order Chicken Biryani">
+Order
+</a>
