--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       <h3>Chicken Biryani</h3>
       <p>₹180</p>
       <a class="order"
+href="https://wa.me/919123456789?text=Hello, I want to order Chicken Biryani">
+Order
+      </a>
+      <a class="order"
          href="https://wa.me/919123456789?text=I want to order Chicken Biryani">
          Order
       </a>
