--- a/index.html
+++ b/index.html
@@ -26,7 +26,21 @@
     <input id="phone" placeholder="Phone Number" required>
     <button type="submit">Send on WhatsApp</button>
   </form>
-</section>
+</section
+  <section class="scan">
+  <h2>Scan & Order</h2>
+
+  <img
+   src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://mann a720-netizen.github.io/"
+   alt="QR Code">
+
+  <br><br>
+
+  <a class="order"
+  href="https://wa.me/919123456789">
+  Order on WhatsApp
+  </a>
+  </section>
   <div class="menu-grid">
 
     <div class="card">
