--- a/index.html
+++ b/index.html
@@ -16,6 +16,105 @@
 </section>
 
 <!-- MENU -->
+  <div class="card">
+  <img src="https://images.unsplash.com/photo-1600628422019-2b37e9c9a0e5">
+  <h3>Egg Biryani</h3>
+  <p>₹150</p>
+  <a class="order"
+     href="https://wa.me/919123456789?text=I want to order Egg Biryani">
+     Order
+  </a>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1604908554161-5c4e5cda3a32">
+  <h3>Chicken Fried Rice</h3>
+  <p>₹130</p>
+  <a class="order"
+     href="https://wa.me/919123456789?text=I want to order Chicken Fried Rice">
+     Order
+  </a>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1625944525533-473f1a4eeb2a">
+  <h3>Egg Fried Rice</h3>
+  <p>₹110</p>
+  <a class="order"
+     href="https://wa.me/919123456789?text=I want to order Egg Fried Rice">
+     Order
+  </a>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1605475128023-1b5a9c2c3b9a">
+  <h3>Chicken Chowmein</h3>
+  <p>₹120</p>
+  <a class="order"
+     href="https://wa.me/919123456789?text=I want to order Chicken Chowmein">
+     Order
+  </a>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1631515243342-3c4a2d01d4c5">
+  <h3>Veg Chowmein</h3>
+  <p>₹90</p>
+  <a class="order"
+     href="https://wa.me/919123456789?text=I want to order Veg Chowmein">
+     Order
+  </a>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1628294895835-7e7a8c9b2e21">
+  <h3>Chicken Pakora</h3>
+  <p>₹140</p>
+  <a class="order"
+     href="https://wa.me/919123456789?text=I want to order Chicken Pakora">
+     Order
+  </a>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1606756790533-5f3d6d2e2d6c">
+  <h3>Paneer Pakora</h3>
+  <p>₹100</p>
+  <a class="order"
+     href="https://wa.me/919123456789?text=I want to order Paneer Pakora">
+     Order
+  </a>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1601050690597-df0568f70950">
+  <h3>Chicken Momos</h3>
+  <p>₹90</p>
+  <a class="order"
+     href="https://wa.me/919123456789?text=I want to order Chicken Momos">
+     Order
+  </a>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1625944230941-ec1c9bdb2e9a">
+  <h3>Veg Momos</h3>
+  <p>₹70</p>
+  <a class="order"
+     href="https://wa.me/919123456789?text=I want to order Veg Momos">
+     Order
+  </a>
+</div>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1604908177522-fb88b1b1f36e">
+  <h3>Chicken Manchurian</h3>
+  <p>₹160</p>
+  <a class="order"
+     href="https://wa.me/919123456789?text=I want to order Chicken Manchurian">
+     Order
+  </a>
+</div>
 <section class="menu">
   <h2>Our Menu</h2>
 <section class="form">
