--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <form onsubmit="sendOrder();return false;">
     <input id="name" placeholder="Your Name" required>
     <input id="item" placeholder="Item Name" required>
+    <input id="table" placeholder="Table Number" required>
     <input id="phone" placeholder="Phone Number" required>
     <button type="submit">Send on WhatsApp</button>
   </form>
@@ -52,152 +53,158 @@
   </a>
   </section>
   
-  <div class="menu-grid">
-<div class="card biryani">
-  <img src="images/biryani.jpg">
-  <h3>Chicken Biryani</h3>
-  <p>₹180</p>
-  <a class="order"
-     href="https://wa.me/919123456789?text=I want Chicken Biryani ₹180">
-     Order
-    
-     </a>
-    </div>
-   div class="card">
-      <img src="images/biryani.jpg">
-      <h3>Chicken Biryani</h3>
-      <p>₹90 Half</p>
-      <a class="order"
-href="https://wa.me/919123456789?text=Hello, I want to order Chicken Biryani">
-Order
+<div class="menu-grid">
+    <!-- Item 2 -->
+<div class="card">
+  <img src="images/mutton-biryani.jpg">
+  <h3>Mutton Biryani</h3>
+  <p>₹250</p>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Mutton Biryani">Order</a>
+</div>
 
-   </a>
-  <div class="card">
-      <img src="images/mutton.jpg">
-      <h3>Mutton Biryani</h3>
-      <p>₹250</p>
-      <a class="order"
-         href="https://wa.me/919123456789?text=I want to order Mutton Biryani">
-         Order
-      </a>
-   </div>
+<!-- Item 3 -->
+<div class="card">
+  <img src="images/chicken-roll.jpg">
+  <h3>Chicken Roll</h3>
+  <p>₹80</p>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Chicken Roll">Order</a>
+</div>
 
-   <div class="card">
-      <img src="images/roll.jpg">
-      <h3>Chicken Roll</h3>
-      <p>₹80</p>
-      <a class="order"
-         href="https://wa.me/919123456789?text=I want to order Chicken Roll">
-         Order
-      </a>
-   </div>
+<!-- Item 4 -->
+<div class="card">
+  <img src="images/chicken-burger.jpg">
+  <h3>Chicken Burger</h3>
+  <p>₹120</p>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Chicken Burger">Order</a>
+</div>
 
-   <div class="card">
-      <img src="images/burger.jpg">
-      <h3>Chicken Burger</h3>
-      <p>₹100</p>
-      <a class="order"
-         href="https://wa.me/919123456789?text=I want to order Chicken Burger">
-        Order
-          <div class="card">
-  <img src="https://images.unsplash.com/photo-1600628422019-2b37e9c9a0e5">
+<!-- Item 5 -->
+<div class="card">
+  <img src="images/egg-biryani.jpg">
   <h3>Egg Biryani</h3>
   <p>₹150</p>
-  <a class="order"
-     href="https://wa.me/919123456789?text=I want to order Egg Biryani">
-     Order
-  </a>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Egg Biryani">Order</a>
 </div>
 
+<!-- Item 6 -->
 <div class="card">
-  <img src="https://images.unsplash.com/photo-1604908554161-5c4e5cda3a32">
+  <img src="images/chicken-fried-rice.jpg">
   <h3>Chicken Fried Rice</h3>
   <p>₹130</p>
-  <a class="order"
-     href="https://wa.me/919123456789?text=I want to order Chicken Fried Rice">
-     Order
-  </a>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Chicken Fried Rice">Order</a>
 </div>
 
+<!-- Item 7 -->
 <div class="card">
-  <img src="https://images.unsplash.com/photo-1625944525533-473f1a4eeb2a">
+  <img src="images/egg-fried-rice.jpg">
   <h3>Egg Fried Rice</h3>
   <p>₹110</p>
-  <a class="order"
-     href="https://wa.me/919123456789?text=I want to order Egg Fried Rice">
-     Order
-  </a>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Egg Fried Rice">Order</a>
 </div>
 
+<!-- Item 8 -->
 <div class="card">
-  <img src="https://images.unsplash.com/photo-1605475128023-1b5a9c2c3b9a">
+  <img src="images/chicken-chowmein.jpg">
   <h3>Chicken Chowmein</h3>
   <p>₹120</p>
-  <a class="order"
-     href="https://wa.me/919123456789?text=I want to order Chicken Chowmein">
-     Order
-  </a>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Chicken Chowmein">Order</a>
 </div>
 
+<!-- Item 9 -->
 <div class="card">
-  <img src="https://images.unsplash.com/photo-1631515243342-3c4a2d01d4c5">
+  <img src="images/veg-chowmein.jpg">
   <h3>Veg Chowmein</h3>
   <p>₹90</p>
-  <a class="order"
-     href="https://wa.me/919123456789?text=I want to order Veg Chowmein">
-     Order
-  </a>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Veg Chowmein">Order</a>
 </div>
 
+<!-- Item 10 -->
 <div class="card">
-  <img src="https://images.unsplash.com/photo-1628294895835-7e7a8c9b2e21">
+  <img src="images/chicken-pakora.jpg">
   <h3>Chicken Pakora</h3>
   <p>₹140</p>
-  <a class="order"
-     href="https://wa.me/919123456789?text=I want to order Chicken Pakora">
-     Order
-  </a>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Chicken Pakora">Order</a>
 </div>
 
+<!-- Item 11 -->
 <div class="card">
-  <img src="https://images.unsplash.com/photo-1606756790533-5f3d6d2e2d6c">
+  <img src="images/paneer-pakora.jpg">
   <h3>Paneer Pakora</h3>
   <p>₹100</p>
-  <a class="order"
-     href="https://wa.me/919123456789?text=I want to order Paneer Pakora">
-     Order
-  </a>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Paneer Pakora">Order</a>
 </div>
 
+<!-- Item 12 -->
 <div class="card">
-  <img src="https://images.unsplash.com/photo-1601050690597-df0568f70950">
+  <img src="images/chicken-momos.jpg">
   <h3>Chicken Momos</h3>
   <p>₹90</p>
-  <a class="order"
-     href="https://wa.me/919123456789?text=I want to order Chicken Momos">
-     Order
-  </a>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Chicken Momos">Order</a>
 </div>
 
+<!-- Item 13 -->
 <div class="card">
-  <img src="https://images.unsplash.com/photo-1625944230941-ec1c9bdb2e9a">
+  <img src="images/veg-momos.jpg">
   <h3>Veg Momos</h3>
   <p>₹70</p>
-  <a class="order"
-     href="https://wa.me/919123456789?text=I want to order Veg Momos">
-     Order
-  </a>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Veg Momos">Order</a>
 </div>
 
+<!-- Item 14 -->
 <div class="card">
-  <img src="https://images.unsplash.com/photo-1604908177522-fb88b1b1f36e">
+  <img src="images/chicken-manchurian.jpg">
   <h3>Chicken Manchurian</h3>
   <p>₹160</p>
-  <a class="order"
-     href="https://wa.me/919123456789?text=I want to order Chicken Manchurian">
-     Order
-      </a>
-    </div>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Chicken Manchurian">Order</a>
+</div>
+
+<!-- Item 15 -->
+<div class="card">
+  <img src="images/paneer-chilli.jpg">
+  <h3>Paneer Chilli</h3>
+  <p>₹150</p>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Paneer Chilli">Order</a>
+</div>
+
+<!-- Item 16 -->
+<div class="card">
+  <img src="images/chicken-lollipop.jpg">
+  <h3>Chicken Lollipop</h3>
+  <p>₹170</p>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Chicken Lollipop">Order</a>
+</div>
+
+<!-- Item 17 -->
+<div class="card">
+  <img src="images/french-fries.jpg">
+  <h3>French Fries</h3>
+  <p>₹80</p>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order French Fries">Order</a>
+</div>
+
+<!-- Item 18 -->
+<div class="card">
+  <img src="images/veg-burger.jpg">
+  <h3>Veg Burger</h3>
+  <p>₹90</p>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Veg Burger">Order</a>
+</div>
+
+<!-- Item 19 -->
+<div class="card">
+  <img src="images/egg-roll.jpg">
+  <h3>Egg Roll</h3>
+  <p>₹60</p>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Egg Roll">Order</a>
+</div>
+
+<!-- Item 20 -->
+<div class="card">
+  <img src="images/chicken-sandwich.jpg">
+  <h3>Chicken Sandwich</h3>
+  <p>₹110</p>
+  <a class="order" href="https://wa.me/919123456789?text=I want to order Chicken Sandwich">Order</a>
+</div>
 
   </div>
 </section>
