--- a/index.html
+++ b/index.html
@@ -205,7 +205,125 @@
   <p>₹110</p>
   <a class="order" href="https://wa.me/919123456789?text=I want to order Chicken Sandwich">Order</a>
 </div>
+<!-- 1 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1604908177522-040c1b7b9f11"><h3>Chicken Biryani</h3><p>₹180</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Biryani">Order</a></div>
 
+<!-- 2 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1628294895950-9805252327ee"><h3>Mutton Biryani</h3><p>₹250</p><a class="order" href="https://wa.me/919123456789?text=Order Mutton Biryani">Order</a></div>
+
+<!-- 3 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1617196039909-59e03b1f52de"><h3>Egg Biryani</h3><p>₹150</p><a class="order" href="https://wa.me/919123456789?text=Order Egg Biryani">Order</a></div>
+
+<!-- 4 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec"><h3>Chicken Fried Rice</h3><p>₹130</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Fried Rice">Order</a></div>
+
+<!-- 5 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec"><h3>Egg Fried Rice</h3><p>₹110</p><a class="order" href="https://wa.me/919123456789?text=Order Egg Fried Rice">Order</a></div>
+
+<!-- 6 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1603133872878-684f208fb84b"><h3>Chicken Chowmein</h3><p>₹120</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Chowmein">Order</a></div>
+
+<!-- 7 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1600628422019-5c2f6b5fcb9e"><h3>Veg Chowmein</h3><p>₹90</p><a class="order" href="https://wa.me/919123456789?text=Order Veg Chowmein">Order</a></div>
+
+<!-- 8 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1628294896055-0a4b9a5e7e4a"><h3>Chicken Roll</h3><p>₹80</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Roll">Order</a></div>
+
+<!-- 9 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1550547660-d9450f859349"><h3>Chicken Burger</h3><p>₹120</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Burger">Order</a></div>
+
+<!-- 10 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1551024601-bec78aea704b"><h3>Veg Burger</h3><p>₹90</p><a class="order" href="https://wa.me/919123456789?text=Order Veg Burger">Order</a></div>
+
+<!-- 11 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1606755962773-d324e7b3f5b4"><h3>Chicken Momos</h3><p>₹90</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Momos">Order</a></div>
+
+<!-- 12 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1617196038437-f1b8d6d7c3a5"><h3>Veg Momos</h3><p>₹70</p><a class="order" href="https://wa.me/919123456789?text=Order Veg Momos">Order</a></div>
+
+<!-- 13 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1601050690597-df0568f70950"><h3>Chicken Pakora</h3><p>₹140</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Pakora">Order</a></div>
+
+<!-- 14 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1604908177225-0a9b0b0d0b6c"><h3>Paneer Pakora</h3><p>₹100</p><a class="order" href="https://wa.me/919123456789?text=Order Paneer Pakora">Order</a></div>
+
+<!-- 15 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1628294896061-6a4b5b5d5e9a"><h3>Chicken Manchurian</h3><p>₹160</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Manchurian">Order</a></div>
+
+<!-- 16 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1600628421919-9a0b9a0b9a0b"><h3>Paneer Chilli</h3><p>₹150</p><a class="order" href="https://wa.me/919123456789?text=Order Paneer Chilli">Order</a></div>
+
+<!-- 17 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1626074353765-517a681e40be"><h3>French Fries</h3><p>₹80</p><a class="order" href="https://wa.me/919123456789?text=Order French Fries">Order</a></div>
+
+<!-- 18 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1606755962773-d324e7b3f5b4"><h3>Chicken Lollipop</h3><p>₹170</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Lollipop">Order</a></div>
+
+<!-- 19 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1628294896068-9f4b9a7e8d5a"><h3>Egg Roll</h3><p>₹60</p><a class="order" href="https://wa.me/919123456789?text=Order Egg Roll">Order</a></div>
+
+<!-- 20 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1550547660-d9450f859349"><h3>Chicken Sandwich</h3><p>₹110</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Sandwich">Order</a></div>
+
+<!-- 21 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1604908177522-040c1b7b9f11"><h3>Veg Biryani</h3><p>₹140</p><a class="order" href="https://wa.me/919123456789?text=Order Veg Biryani">Order</a></div>
+
+<!-- 22 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1617196039909-59e03b1f52de"><h3>Paneer Fried Rice</h3><p>₹140</p><a class="order" href="https://wa.me/919123456789?text=Order Paneer Fried Rice">Order</a></div>
+
+<!-- 23 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec"><h3>Chicken Gravy</h3><p>₹220</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Gravy">Order</a></div>
+
+<!-- 24 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1628294895950-9805252327ee"><h3>Mutton Curry</h3><p>₹280</p><a class="order" href="https://wa.me/919123456789?text=Order Mutton Curry">Order</a></div>
+
+<!-- 25 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1601050690597-df0568f70950"><h3>Chicken Cutlet</h3><p>₹70</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Cutlet">Order</a></div>
+
+<!-- 26 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1551024601-bec78aea704b"><h3>Veg Sandwich</h3><p>₹70</p><a class="order" href="https://wa.me/919123456789?text=Order Veg Sandwich">Order</a></div>
+
+<!-- 27 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1606755962773-d324e7b3f5b4"><h3>Chicken Soup</h3><p>₹90</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Soup">Order</a></div>
+
+<!-- 28 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1617196038437-f1b8d6d7c3a5"><h3>Veg Soup</h3><p>₹70</p><a class="order" href="https://wa.me/919123456789?text=Order Veg Soup">Order</a></div>
+
+<!-- 29 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1600628422019-5c2f6b5fcb9e"><h3>Chicken Shawarma</h3><p>₹150</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Shawarma">Order</a></div>
+
+<!-- 30 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1626074353765-517a681e40be"><h3>Cold Coffee</h3><p>₹80</p><a class="order" href="https://wa.me/919123456789?text=Order Cold Coffee">Order</a></div>
+
+<!-- 31 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1551024601-bec78aea704b"><h3>Tea</h3><p>₹20</p><a class="order" href="https://wa.me/919123456789?text=Order Tea">Order</a></div>
+
+<!-- 32 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1550547660-d9450f859349"><h3>Cold Drink</h3><p>₹40</p><a class="order" href="https://wa.me/919123456789?text=Order Cold Drink">Order</a></div>
+
+<!-- 33 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1604908177225-0a9b0b0d0b6c"><h3>Chicken Pizza</h3><p>₹220</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Pizza">Order</a></div>
+
+<!-- 34 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1551024601-bec78aea704b"><h3>Veg Pizza</h3><p>₹180</p><a class="order" href="https://wa.me/919123456789?text=Order Veg Pizza">Order</a></div>
+
+<!-- 35 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1606755962773-d324e7b3f5b4"><h3>Chicken Pasta</h3><p>₹160</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Pasta">Order</a></div>
+
+<!-- 36 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1617196038437-f1b8d6d7c3a5"><h3>Veg Pasta</h3><p>₹130</p><a class="order" href="https://wa.me/919123456789?text=Order Veg Pasta">Order</a></div>
+
+<!-- 37 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1600628422019-5c2f6b5fcb9e"><h3>Chicken Nuggets</h3><p>₹120</p><a class="order" href="https://wa.me/919123456789?text=Order Chicken Nuggets">Order</a></div>
+
+<!-- 38 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1601050690597-df0568f70950"><h3>Veg Cutlet</h3><p>₹60</p><a class="order" href="https://wa.me/919123456789?text=Order Veg Cutlet">Order</a></div>
+
+<!-- 39 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1551024601-bec78aea704b"><h3>Ice Cream</h3><p>₹60</p><a class="order" href="https://wa.me/919123456789?text=Order Ice Cream">Order</a></div>
+
+<!-- 40 -->
+<div class="card"><img src="https://images.unsplash.com/photo-1550547660-d9450f859349"><h3>Gulab Jamun</h3><p>₹50</p><a class="order" href="https://wa.me/919123456789?text=Order Gulab Jamun">Order</a></div>
   </div>
 </section>
 
