--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <button onclick="filterMenu('chinese')">Chinese</button>
   <button onclick="filterMenu('snacks')">Snacks</button>
   </div>
+  <input class="search" placeholder="Search food..." 
+onkeyup="searchItem(this.value)">
   <h2>Our Menu</h2>
 <section class="form">
   <h2>Place Order</h2>
