--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
   <p>Best Biryani & Fast Food</p>
   <a class="btn" href="https://wa.me/919123456789">Order on WhatsApp</a>
 </section>
+<input type="text" id="search" placeholder="Search food..." onkeyup="searchFood()">
 
+<div class="filters">
+  <button onclick="filterFood('all')">All</button>
+  <button onclick="filterFood('biryani')">Biryani</button>
+  <button onclick="filterFood('rice')">Rice</button>
+  <button onclick="filterFood('chinese')">Chinese</button>
+</div>
 <!-- MENU -->
 
   </a>
