--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
   <a class="btn" href="https://wa.me/919123456789">Order on WhatsApp</a>
 </section>
 <input type="text" id="search" placeholder="Search food..." onkeyup="searchFood()">
+<div class="filters">
+  <button onclick="filterItems('all')">All</button>
+  <button onclick="filterItems('biryani')">Biryani</button>
+  <button onclick="filterItems('rice')">Rice</button>
+  <button onclick="filterItems('chinese')">Chinese</button>
+  <button onclick="filterItems('snacks')">Snacks</button>
+</div>
 
+<input type="text" id="searchInput" placeholder="Search food..."
+onkeyup="searchItems()">
 <!-- MENU -->
 
   </a>
