--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ankit Food Corner</title>
+  <title>abc  Food Corner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -10,18 +10,10 @@
 
 <!-- HERO -->
 <section class="hero">
-  <h1>Ankit Food Corner</h1>
+  <h1>abc Food Corner</h1>
   <p>Best Biryani & Fast Food</p>
   <a class="btn" href="https://wa.me/919123456789">Order on WhatsApp</a>
 </section>
-<input type="text" id="search" placeholder="Search food..." onkeyup="searchFood()">
-<div class="filters">
-  <button onclick="filterItems('all')">All</button>
-  <button onclick="filterItems('biryani')">Biryani</button>
-  <button onclick="filterItems('rice')">Rice</button>
-  <button onclick="filterItems('chinese')">Chinese</button>
-  <button onclick="filterItems('snacks')">Snacks</button>
-</div>
 
 <input type="text" id="searchInput" placeholder="Search food..."
 onkeyup="searchItems()">
